--- a/public/404.html
+++ b/public/404.html
@@ -24,7 +24,7 @@
   </style>
 </head>
 
-<body class="landing-bg">
+<body class="404-bg">
   <!-- This file lives in public/404.html -->
   <div class="dialog">
     <div>
