--- a/public/404.html
+++ b/public/404.html
@@ -5,10 +5,10 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
 
-  .landing-bg {
-  background-image: url("error_bg.png");
-  height: 100vh;
-  text-align: center;
+  .error-bg {
+    background-image: url("error_bg.png");
+    background-size: 100vw 100vh;
+    text-align: center;
   }
 
   .dialog h1 {
@@ -24,7 +24,7 @@
   </style>
 </head>
 
-<body class="404-bg">
+<body class="error-bg">
   <!-- This file lives in public/404.html -->
   <div class="dialog">
     <div>
