--- a/public/404.html
+++ b/public/404.html
@@ -11,14 +11,20 @@
     text-align: center;
   }
 
+  .dialog {
+    margin-top: 300px;
+  }
+
   .dialog h1 {
       color: lightskyblue;
+      font-family: "Open Sans";
       font-weight: 800;
       font-size: 47px;
     }
 
   .dialog p {
-    color: lightgrey;
+    color: gray;
+    font-family: "Open Sans";
   }
 
   </style>
