error page style

--- a/public/404.html
+++ b/public/404.html
@@ -12,7 +12,7 @@
   }
 
   .dialog {
-    margin-top: 300px;
+    margin-top: 200px;
   }
 
   .dialog h1 {
@@ -27,6 +27,11 @@
     font-family: "Open Sans";
   }
 
+  a {
+    text-decoration: none;
+    font-family: "Open Sans";
+  }
+
   </style>
 </head>
 
@@ -34,10 +39,12 @@
   <!-- This file lives in public/404.html -->
   <div class="dialog">
     <div>
+      <img src="lengua_viva_logo_cropped_text.png" width="200px">
       <h1>The page you were looking for doesn't exist.</h1>
       <p>You may have mistyped the address or the page may have moved.</p>
     </div>
     <p>If you are the application owner check the logs for more information.</p>
+    <a href="www.lenguaviva.xyz">Return to Home</a>
   </div>
 </body>
 </html>
